--- a/styles/main.css
+++ b/styles/main.css
@@ -45,7 +45,9 @@ h1 {
 
 .carousel__btn {
   width: 47px;
-  height: 47px; }
+  height: 47px;
+  border: 1px solid aqua;
+  border-radius: 50%; }
   .carousel__btn_next {
     background: url(../images/slider-btn/next-btn.png); }
   .carousel__btn_prev {
@@ -86,6 +88,9 @@ body {
     margin: 0 20px; }
   .carousel__btn {
     margin-top: 50px; }
+    .carousel__btn:hover {
+      cursor: pointer;
+      border: 1px solid gold; }
   .carousel__dots-wrap {
     margin-top: 16px;
     margin-left: 125px;
